@@ -1,7 +1,14 @@
 general:
   id: 1
   name: General
+  type: Category
 
 technology:
   id: 2
   name: Technology
+  type: Category
+
+sti_test:
+  id: 3
+  name: Special category
+  type: SpecialCategory
