@@ -9,3 +9,11 @@ technology_welcome:
 general_thinking:
   category_id: 1
   post_id: 2
+
+general_sti_habtm:
+  category_id: 1
+  post_id: 6
+
+sti_test_sti_habtm:
+  category_id: 3
+  post_id: 6
