@@ -1,3 +1,5 @@
 class Category < ActiveRecord::Base
   has_and_belongs_to_many :posts
 end
+
+class SpecialCategory < Category; end;
