@@ -15,3 +15,45 @@ does_it_hurt:
   post_id: 2
   body: Don't think too hard
   type: SpecialComment
+
+eager_sti_on_associations_comment:
+  id: 4
+  post_id: 4
+  body: Normal type
+  type: Comment
+
+eager_sti_on_associations_vs_comment:
+  id: 5
+  post_id: 4
+  body: Very Special type
+  type: VerySpecialComment
+
+eager_sti_on_associations_s_comment1:
+  id: 6
+  post_id: 4
+  body: Special type
+  type: SpecialComment
+
+eager_sti_on_associations_s_comment2:
+  id: 7
+  post_id: 4
+  body: Special type 2
+  type: SpecialComment
+
+eager_sti_on_associations_comment:
+  id: 8
+  post_id: 4
+  body: Normal type 
+  type: Comment
+
+check_eager_sti_on_associations:
+  id: 9
+  post_id: 5
+  body: Normal type
+  type: Comment
+
+check_eager_sti_on_associations2:
+  id: 10
+  post_id: 5
+  body: Special Type
+  type: SpecialComment
