@@ -160,7 +160,8 @@ CREATE TABLE tasks (
 
 CREATE TABLE categories (
   id int generated by default as identity (start with +10000),
-  name varchar(255) NOT NULL
+  name varchar(255) NOT NULL,
+  type varchar(40) default NULL
 );
 
 CREATE TABLE categories_posts (
