@@ -162,6 +162,7 @@ CREATE TABLE `tasks` (
 CREATE TABLE `categories` (
   `id` int(11) NOT NULL auto_increment,
   `name` VARCHAR(255) NOT NULL,
+  `type` VARCHAR(255) NOT NULL,
   PRIMARY KEY  (`id`)
 ) TYPE=InnoDB;
 
