@@ -147,7 +147,8 @@ CREATE TABLE tasks (
 
 CREATE TABLE categories (
   id int NOT NULL IDENTITY(1, 1) PRIMARY KEY,
-  name varchar(255)
+  name varchar(255),
+  type varchar(255) default NULL
 );
 
 CREATE TABLE categories_posts (
