@@ -18,3 +18,24 @@ authorless:
   title: I don't have any comments
   body: I just don't want to
   type: Post
+
+sti_comments:
+  id: 4
+  author_id: 1
+  title: sti comments
+  body: hello
+  type: Post
+
+sti_post_and_comments:
+  id: 5
+  author_id: 1
+  title: sti me
+  body: hello
+  type: StiPost
+
+sti_habtm:
+  id: 6
+  author_id: 1
+  title: habtm sti test
+  body: hello
+  type: Post
